<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="access_encrypt_group">Access encrypt group</string>
    <string name="add_new_tag">New group</string>
    <string name="all_tag">All</string>
    <string name="app_name">Notes</string>
    <string name="audio_note">Audio note</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_hightlight">Cancel hightlight</string>
    <string name="convert_to_note">Converting into note</string>
    <string name="create_file_fail">Creating Files failure</string>
    <string name="create_sharing">Being created sharing, please wait</string>
    <string name="create_time">Created at </string>
    <string name="custom_note">Custom display notes</string>
    <string name="date_time_set">Setup</string>
    <string name="default_tag_life">Daily life</string>
    <string name="default_tag_temp">Temporary</string>
    <string name="default_tag_work">Work</string>
    <string name="delete">Delete</string>
    <string name="delete_one_tag">Delete this group?</string>
    <string name="delete_one_tip">Delete this note?</string>
    <string name="delete_tag_tip">Notes are not deleted in the group</string>
    <string name="delete_tip">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="desktop_cancel">Cancel show</string>
    <string name="desktop_cancel_ing">Cancel Show</string>
    <string name="desktop_ing">Sending to widget</string>
    <string name="desktop_success">Sent successfully, see the widget</string>
    <string name="edit_hint">text</string>
    <string name="edit_title">Title</string>
    <string name="encrypt_cofirm">Add note to encrypt group</string>
    <string name="encrypt_instruction">Notes encryption instructions</string>
    <string name="encrypt_tip">"•  Pictures and sound recordings may still be viewed by other applications after encrypted, not recommended encrypt notes containing pictures or recording files
•  Downgrade firmware or synchronized to a lower version firmware, will lead anyone seen encrypt notes"</string>
    <string name="encrypt_tip_title">Encryption tips</string>
    <string name="exporting">Being exported, please wait</string>
    <string name="faild_to_create_file">Fail to create file</string>
    <string name="fast_scroll_alphabet">" ABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
    <string name="file_not_available">Picture read failure</string>
    <string name="finish_export">Finished exporting</string>
    <string name="fmt_pre_yesterday">Yesterday</string>
    <string name="folder_already_exsite">The group already existes</string>
    <string name="folder_null_not_save">Empty group cannot be saved</string>
    <string name="group_created">Group created</string>
    <string name="group_encrypt">Encrypt</string>
    <string name="hour">hour</string>
    <string name="image_limit_tip">Maximum picture can not exceed 10</string>
    <string name="ime_action_done">Done</string>
    <string name="insert_pic_title">Insert image</string>
    <string name="insert_sd_card">Please mount USB storage</string>
    <string name="last_modified">Last modification </string>
    <string name="list_limit">Limit 100 list</string>
    <string name="lock_month_day">MMM d</string>
    <string name="lock_week">yyyy年M月d日(EEE)</string>
    <string name="login">Login</string>
    <string name="login_tip">Set encryption notes need to login flyme account</string>
    <string name="login_title">Login flyme account</string>
    <string name="max_length_reached">Maximum length reached</string>
    <string name="mc_action_settings">Settings</string>
    <string name="mc_allow">Allow</string>
    <string name="mc_alway_allow">Always allow</string>
    <string name="mc_app_name">MeizuCommon</string>
    <string name="mc_cancel">Cancel</string>
    <string name="mc_custom_date_time_gregorian">Gregorian</string>
    <string name="mc_custom_date_time_lunar">Lunar</string>
    <string name="mc_date_time_day">d</string>
    <string name="mc_date_time_hour">h</string>
    <string name="mc_date_time_min">m</string>
    <string name="mc_date_time_month">m</string>
    <string name="mc_date_time_sec">s</string>
    <string name="mc_date_time_year">y</string>
    <string name="mc_description_target_answer">Answer</string>
    <string name="mc_description_target_decline">Decline</string>
    <string name="mc_every_day">Every day</string>
    <string name="mc_friday">FR</string>
    <string name="mc_hello_world">Hello world!</string>
    <string name="mc_hour">Hour</string>
    <string name="mc_minute">Minute</string>
    <string name="mc_monday">MO</string>
    <string name="mc_never">Only once</string>
    <string name="mc_permission_apply">Permission application</string>
    <string name="mc_permission_message_content">%1$srequires%2$s%3$d key permissions</string>
    <string name="mc_reject">Reject</string>
    <string name="mc_saturday">SA</string>
    <string name="mc_second">Second</string>
    <string name="mc_sunday">SU</string>
    <string name="mc_thursday">TH</string>
    <string name="mc_tuesday">TU</string>
    <string name="mc_wednesday">WE</string>
    <string name="mc_weekend">Weekend</string>
    <string name="mc_working_day">Workday</string>
    <string name="mc_yes">Ok</string>
    <string name="media_duration_format_long">%1$02d:%3$02d:%5$02d</string>
    <string name="media_duration_format_short">%2$02d:%5$02d</string>
    <string name="menu_change_paper">Font And Paper color</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_done">Done</string>
    <string name="menu_encrypt">Encrypt</string>
    <string name="menu_export">Export</string>
    <string name="menu_export_pic">Export as picture</string>
    <string name="menu_export_text">Export as text</string>
    <string name="menu_float">Float mode</string>
    <string name="menu_full_screen">Full screen</string>
    <string name="menu_share">Share</string>
    <string name="menu_tip_edit">Edit</string>
    <string name="menu_tip_list">List</string>
    <string name="menu_tip_new">Create</string>
    <string name="menu_tip_pic">Picture</string>
    <string name="menu_tip_record">Record</string>
    <string name="menu_top">Top</string>
    <string name="minute">min</string>
    <string name="more">…</string>
    <string name="more_item_label">More</string>
    <string name="mz_date_time_day">d</string>
    <string name="mz_date_time_hour">h</string>
    <string name="mz_date_time_min">m</string>
    <string name="mz_date_time_month">m</string>
    <string name="mz_date_time_sec">s</string>
    <string name="mz_date_time_year">y</string>
    <string name="mz_numeric_date_format_dmy">EEE, d/M/yyyy</string>
    <string name="mz_numeric_date_format_dym">EEE, d/yyyy/M</string>
    <string name="mz_numeric_date_format_mdy">EEE, M/d/yyyy</string>
    <string name="mz_numeric_date_format_myd">EEE, M/yyyy/d</string>
    <string name="mz_numeric_date_format_ydm">yyyy/d/M, EEE</string>
    <string name="mz_numeric_date_format_ymd">yyyy/M/d, EEE</string>
    <string name="mzuc_cancel">Cancel</string>
    <string name="mzuc_cancel_download">Cancel the download</string>
    <string name="mzuc_cancel_install">Cancel the install</string>
    <string name="mzuc_delete">Delete</string>
    <string name="mzuc_download_fail">Download failed</string>
    <string name="mzuc_download_finish_install">Download completed, tap to install</string>
    <string name="mzuc_download_finish_s" formatted="false">%s V%s Download completed</string>
    <string name="mzuc_download_progress_desc_s" formatted="false">Downloading %s %s</string>
    <string name="mzuc_downloading">Downloading</string>
    <string name="mzuc_file_size_s">Size: %s</string>
    <string name="mzuc_found_update_s">Update available: %s</string>
    <string name="mzuc_install_cancel_tip">Download canceled</string>
    <string name="mzuc_install_fail">Installation failed</string>
    <string name="mzuc_install_immediately">Install now</string>
    <string name="mzuc_install_later">Install later</string>
    <string name="mzuc_installing">Installing</string>
    <string name="mzuc_notification_message_s">New features: %s</string>
    <string name="mzuc_ok">OK</string>
    <string name="mzuc_retry">Retry</string>
    <string name="mzuc_skip_version">Skip this version</string>
    <string name="mzuc_skip_warn_tip">Skip this version without further notice</string>
    <string name="mzuc_update_finish">Update completed</string>
    <string name="mzuc_update_immediately">Update now</string>
    <string name="mzuc_update_msg_title_s" formatted="false">%s V%s</string>
    <string name="mzuc_update_title_s" formatted="false">%s V%s Release</string>
    <string name="mzuc_wait_tip">Please wait</string>
    <string name="mzuc_warn_later">Remind me later</string>
    <string name="new_note">Create a note</string>
    <string name="new_tag">New group</string>
    <string name="new_tag_pop">Group</string>
    <string name="no_network">No network connection</string>
    <string name="no_network_msg">Set encrypted notes need to connect to a network and login flyme account</string>
    <string name="no_note">No note</string>
    <string name="note_group">Group</string>
    <string name="note_not_exist">The note does not exist</string>
    <string name="ok">OK</string>
    <string name="operation_path">Memo details > Menu > Send to widget</string>
    <string name="other_failure">Operation failed</string>
    <string name="panel_color">Color</string>
    <string name="pattern_a_hour_before">an hour ago</string>
    <string name="pattern_a_minute_before">a minute ago</string>
    <string name="pattern_hour_before">, hours ago</string>
    <string name="pattern_hour_minute" formatted="false">%H:%M</string>
    <string name="pattern_hour_minute_12" formatted="false">%p %I:%M</string>
    <string name="pattern_minute_before">, minutes ago</string>
    <string name="pattern_month_day" formatted="false">%-m/%-e</string>
    <string name="pattern_month_day_hour_minute" formatted="false">%-m/%-e %H:%M</string>
    <string name="pattern_month_day_hour_minute_12" formatted="false">%-m/%-e %p %I:%M</string>
    <string name="pattern_week">%a</string>
    <string name="pattern_week_hour_minute" formatted="false">%a %H:%M</string>
    <string name="pattern_week_hour_minute_12" formatted="false">%a %p %I:%M</string>
    <string name="pattern_week_month_day_hour_minute" formatted="false">%a %-m/%-e %H:%M</string>
    <string name="pattern_week_month_day_hour_minute_12" formatted="false">%a %-m/%-e %p %I:%M</string>
    <string name="pattern_year_month" formatted="false">%Y/%-m</string>
    <string name="pattern_year_month_day" formatted="false">%Y/%-m/%-e</string>
    <string name="pattern_year_month_day_hour_minute" formatted="false">%Y/%-m/%-e %H:%M</string>
    <string name="pattern_year_month_day_hour_minute_12" formatted="false">%Y/%-m/%-e %p %I:%M</string>
    <string name="send_to_desktop">Display into widget</string>
    <string name="share">Share</string>
</resources>