<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/mz_ic_list" android:id="@id/list" android:title="@string/menu_tip_list" android:showAsAction="always" />
    <item android:icon="@drawable/mz_ic_photo" android:id="@id/photo" android:title="@string/menu_tip_pic" android:showAsAction="always" />
    <item android:icon="@drawable/mz_ic_record" android:id="@id/record" android:title="@string/menu_tip_record" android:showAsAction="always" />
    <item android:icon="@drawable/mz_ic_more" android:id="@id/more" android:visible="false" android:showAsAction="always" />
    <item android:id="@id/menu_top" android:title="@string/menu_top" android:checkable="true" android:showAsAction="never" />
    <item android:id="@id/menu_share" android:title="@string/menu_share" android:showAsAction="never" />
    <item android:id="@id/menu_change_paper" android:title="@string/menu_change_paper" android:showAsAction="never" />
    <item android:id="@id/menu_desktop" android:title="@string/send_to_desktop" android:checkable="true" android:showAsAction="never" />
    <item android:id="@id/menu_float" android:visible="false" android:title="@string/menu_float" android:showAsAction="never" />
    <item android:id="@id/menu_encrypt" android:visible="false" android:title="@string/menu_encrypt" android:showAsAction="never" />
    <item android:id="@id/menu_delete" android:visible="false" android:title="@string/menu_delete" android:showAsAction="never" />
    <item android:id="@id/menu_export_pic" android:visible="false" android:title="@string/menu_export_pic" android:showAsAction="never" />
    <item android:id="@id/menu_export" android:visible="false" android:title="@string/menu_export" android:showAsAction="never">
        <menu>
            <item android:id="@id/submenu_export_pic" android:title="@string/menu_export_pic" android:showAsAction="always" />
            <item android:id="@id/submenu_export_text" android:title="@string/menu_export_text" android:showAsAction="always" />
        </menu>
    </item>
</menu>