<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/action_share"
        android:icon="@drawable/mz_sb_share"
        android:showAsAction="always"
        android:title="@string/share" />
    <item
        android:id="@id/action_delete"
        android:icon="@drawable/mz_sb_delete"
        android:showAsAction="always"
        android:title="@string/delete" />
    <item
        android:id="@id/action_top"
        android:checkable="true"
        android:checked="true"
        android:showAsAction="never"
        android:title="@string/menu_top" />
    <item
        android:id="@id/action_send_desktop"
        android:checkable="true"
        android:checked="true"
        android:showAsAction="never"
        android:title="@string/send_to_desktop" />
</menu>