<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="@dimen/mz_action_button_min_height"
    android:orientation="vertical">

    <LinearLayout
        android:id="@id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/no_note"
            android:textColor="#4c000000"
            android:textSize="16.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/encrypt_tip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17.0dip"
            android:includeFontPadding="false"
            android:text="@string/encrypt_tip_title"
            android:textColor="#80000000"
            android:textSize="18.0sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginBottom="18.0dip"
            android:background="#33000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14.0dip"
            android:layout_marginRight="14.0dip"
            android:includeFontPadding="false"
            android:lineSpacingExtra="@dimen/stagger_line_space"
            android:text="@string/encrypt_tip"
            android:textColor="#4c000000"
            android:textSize="14.0sp" />
    </LinearLayout>

    <com.meizu.widget.StaggeredGridView
        android:id="@id/staggeredGridView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clipToPadding="false"
        android:fadingEdge="none"
        android:paddingBottom="@dimen/stagger_margin_bottom"
        android:paddingLeft="@dimen/stagger_margin_left"
        android:paddingRight="@dimen/stagger_margin_right"
        android:paddingTop="@dimen/stagger_margin_top"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" />
</LinearLayout>