<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="9.0dip"
    android:layout_marginLeft="3.0dip"
    android:layout_marginRight="3.0dip"
    android:layout_marginTop="9.0dip"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@drawable/wg_notes_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@id/new_note"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:clickable="false"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingLeft="@dimen/widget_text_horizontal_margin"
            android:singleLine="true"
            android:text="@string/new_note"
            android:textColor="#ffffffff"
            android:textSize="18.0sp" />

        <ImageView
            android:id="@id/edit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_widget_select_right"
            android:paddingLeft="@dimen/widget_text_horizontal_margin"
            android:paddingRight="@dimen/widget_text_horizontal_margin"
            android:src="@drawable/wg_ic_unfold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/wg_bg"
        android:orientation="vertical">

        <ListView
            android:id="@id/listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/widget_list_vertical_margin"
            android:layout_marginLeft="@dimen/widget_list_horizontal_margin"
            android:layout_marginRight="@dimen/widget_list_horizontal_margin"
            android:layout_marginTop="@dimen/widget_list_vertical_margin"
            android:clipToPadding="false"
            android:divider="@null"
            android:dividerHeight="@dimen/widget_list_divider_height"
            android:drawSelectorOnTop="true"
            android:fadingEdge="none"
            android:paddingBottom="14.0dip"
            android:paddingLeft="17.0dip"
            android:paddingRight="17.0dip"
            android:paddingTop="14.0dip"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbarThumbVertical="@drawable/mz_scrollbar_handle_vertical" />

        <LinearLayout
            android:id="@id/empty_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/custom_note"
                android:textColor="#80000000"
                android:textSize="14.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/operation_path"
                android:textColor="#80000000"
                android:textSize="14.0sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>